--- a/style.css
+++ b/style.css
@@ -12,3 +12,17 @@ footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
+}
+
+.special-a {
+  color: black;
+  text-decoration: none; /* no underline */
+}
+
+.special-a:hover {
+  color: black;
+  text-decoration: none; /* no underline */
+}
